# workingnomads_autotests_web

./: .gitignore  README.md  pyproject.toml
allure-results/: 00cbd062-8ba9-48fe-a8b3-c26dbf931ba4-result.json  01b7703e-233b-447c-adc7-0bbecc1b4037-container.json  02857074-f15a-4cb6-9f55-859b5d882d93-container.json  029305ce-aa2d-417b-a3bf-1297f5e838f0-container.json  0351ec69-c9d3-4df8-b7cb-5ca1d45ae59a-attachment.html  04500925-c7cd-4b4d-8eb1-368eaf06433b-container.json  04fbe61f-29e5-4028-85ff-9f956102bd83-attachment.html  07b345ed-1edf-4aee-abff-ee9ebd167410-container.json  0be11489-d5f6-4cbf-9eee-27777c5c7dd1-result.json  0c0ca479-b0ff-4ad6-9e6a-dff58ace1833-container.json  0c5c423b-dcae-42dc-8cac-5234b284ce5b-result.json  0e415f6e-8aab-4e89-81ac-06cac2d9d215-container.json  0e9e7d80-5fc9-406d-accf-0cd7e4253b99-attachment.html  0ea90882-2a48-43ca-b625-cd7c478921b0-container.json  11d330fb-981b-47df-9a24-0aad0212015b-attachment.html  1280d821-b8d6-48cc-b1b9-eefa64ef8fe3-container.json  1689f169-f86a-4a14-b8e1-76309739e9bd-result.json  1842ba5b-542d-4d00-83eb-13d3c005552e-result.json  184cf2b7-ec9a-4bc1-a0fe-386750392186-attachment.html  194aefaa-4b26-46d4-a539-c57b95873fcd-attachment.html  19a4bd13-8a51-4de5-be87-a6ccbb750aa4-container.json  1a80c9b5-7f8d-4457-9c90-6b8cea2292e4-container.json  1cfdb81e-3713-4151-b15e-1a4a3cee654a-result.json  1de18b49-ddef-448a-96b0-dac7d606ba92-attachment.html  1f10a68c-ac0b-4e44-8815-8b75be55e1a7-container.json  1fdc051d-7068-4869-b44d-1f58bb5540f7-container.json  2045f392-88cc-4818-b2c3-d8923f2d4f78-attachment.html  (+240 more)
(+214 files in other folders)
